[project]
name = "change_wheel_version"
version = "0.5.0"
description = "Change the version of a wheel file"
requires-python = ">=3.9"
dependencies = ["wheel", "installer", "packaging"]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["wheel", "version", "packaging"]

[project.scripts]
change_wheel_version = "change_wheel_version:main"

[project.urls]
repository = "https://github.com/hauntsaninja/change_wheel_version"
changelog = "https://github.com/hauntsaninja/change_wheel_version/blob/master/CHANGELOG.md"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = 3.9
strict = true
enable_error_code = ["redundant-expr", "truthy-bool"]
